crates/python_parser/tests/snapshots/invalid_syntax@while_stmt_invalid_test_expr.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/while_stmt_invalid_test_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..70,
        body: [
            While(
                WhileStmt {
                    range: 0..13,
                    test: Starred(
                        StarredExpr {
                            range: 6..8,
                            value: Name(
                                NameExpr {
                                    range: 7..8,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 10..13,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 10..13,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            While(
                WhileStmt {
                    range: 14..32,
                    test: Yield(
                        YieldExpr {
                            range: 20..27,
                            value: Some(
                                Name(
                                    NameExpr {
                                        range: 26..27,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 29..32,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 29..32,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            While(
                WhileStmt {
                    range: 33..40,
                    test: Name(
                        NameExpr {
                            range: 39..40,
                            id: Name("a"),
                            ctx: Load,
                        },
                    ),
                    body: [],
                    orelse: [],
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 42..48,
                    target: Name(
                        NameExpr {
                            range: 42..43,
                            id: Name("b"),
                            ctx: Store,
                        },
                    ),
                    annotation: EllipsisLiteral(
                        EllipsisLiteralExpr {
                            range: 45..48,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            While(
                WhileStmt {
                    range: 49..61,
                    test: Named(
                        NamedExpr {
                            range: 55..61,
                            target: Name(
                                NameExpr {
                                    range: 55..56,
                                    id: Name("a"),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 60..61,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                    body: [],
                    orelse: [],
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 63..69,
                    target: Name(
                        NameExpr {
                            range: 63..64,
                            id: Name("b"),
                            ctx: Store,
                        },
                    ),
                    annotation: EllipsisLiteral(
                        EllipsisLiteralExpr {
                            range: 66..69,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | while *x: ...
  |       ^^ Syntax Error: Starred expression cannot be used here
2 | while yield x: ...
3 | while a, b: ...
  |


  |
1 | while *x: ...
2 | while yield x: ...
  |       ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | while a, b: ...
4 | while a := 1, b: ...
  |


  |
1 | while *x: ...
2 | while yield x: ...
3 | while a, b: ...
  |        ^ Syntax Error: Expected ':', found ','
4 | while a := 1, b: ...
  |


  |
2 | while yield x: ...
3 | while a, b: ...
4 | while a := 1, b: ...
  |             ^ Syntax Error: Expected ':', found ','
  |
